CHANGES
=======

2.1 (Undefined)
---------------

2.0 (2018-02-19)
----------------
* Drop aiohttp < 3 support
* ``EventSourceResponse.send`` is now a coroutine.

1.1.0 (2017-08-21)
------------------

* Drop python 3.4 support
* Add new context manager API


1.0.0 (2017-04-14)
------------------

* Release aiohttp-sse==1.0.0


0.1.0 (2017-03-23)
------------------

* add support for asynchronous context manager interface
* tests refactoring
* modernize internal api to align with aiohttp


0.0.2 (2017-01-13)
------------------

* Added MANIFEST.in


0.0.1 (2017-01-13)
------------------

* Initial release