@@ -1,5 +1,5 @@
 [tox]
-envlist = py{35,36}-aiohttp-{3,master}
+envlist = py{35,36,37}-aiohttp-{3,master}
 
 [testenv]
 deps =
